syntax = "proto3";

import "google/protobuf/timestamp.proto";

import "example.proto";
import "nested_example.proto";

package example2.v1;

message Message {
  string message = 1;
  google.protobuf.Timestamp created_at = 2;
  example.v1.Message example_message = 3;
  nested.v1.Nested nested = 4;
}

message SendMessageRequest {
  string message = 1;
  google.protobuf.Timestamp created_at = 2;
}

message GetMessageResponse { Message message = 1; }

service ExampleService {
  rpc SendMessage(example.v1.SendMessageRequest) returns (GetMessageResponse);
}
